@@ -1,2 +1,4 @@
 Makefile.in
 Makefile
+gnome-2.soundlist
+gtk-events-2.soundlist
