@@ -1,3 +1,8 @@
+2002-04-16  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-data/Makefile.am: Fix intltool support.
+	* gnome-data/.cvsignore: Ignore the generated files.
+	
 2002-04-11  Mark McLoughlin  <mark@skynet.ie>
 
 	* libgnome/gnome-exec.c: (safe_read): impl to handle EINTR
